# xgboost-rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
src/: dataset.rs  error.rs  grad.rs  inference.rs  lib.rs  metrics.rs  model.rs  model_io.rs  objective.rs  params.rs  predict.rs  xgboost_json.rs
src/booster/: gbtree.rs  mod.rs
src/hist/: bin_matrix.rs  cuts.rs  histogram.rs  mod.rs
src/official_model/: loader.rs  mod.rs
src/tree/: builder.rs  mod.rs  node.rs  split.rs  validation.rs
src/xgboost_json/: loader.rs  mod.rs  schema.rs
tests/: inference_model.rs  multiclass_json.rs  official_model_json.rs  predict_regression.rs  serialization.rs  train_regression.rs  xgboost_json.rs
tests/fixtures/: classifier.json  regressor.json
tests/fixtures/binary/: cache_X_test.csv  cache_y_pred.csv  cache_y_true.csv  model.json
tests/fixtures/regression/: cache_X_test.csv  cache_y_pred.csv  cache_y_true.csv  model.json
tests/fixtures/softmax/: cache_y_pred.csv  iris_3class_softmax_v1.model.json
tests/fixtures/softprob/: cache_X_test.csv  cache_y_pred.csv  cache_y_true.csv  iris_3class_softprob_v1.model.json
