[package]
name = "xgboost-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Experimental Rust inference runtime for official XGBoost JSON regression models."
readme = "README.md"
license = "MIT"
repository = "https://github.com/huangbogeng/xgboost-rs"
homepage = "https://github.com/huangbogeng/xgboost-rs"
documentation = "https://docs.rs/xgboost-rs"
keywords = ["xgboost", "gbdt", "machine-learning", "regression"]
categories = ["algorithms", "science"]

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
